setting urls in local storage

--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,16 @@
-<!doctype html>
-<html>
-  <head>
-  </head>
-  <body>
-    This is how Tom makes things
-  </body>
-</html>
+<style>
+  textarea {
+    width: 500px;
+    height: 150px;
+  }
+</style>
+<label>Project URLs</label>
+<textarea id='URLs'>
+https://github.com/sky-uk/Digital-Help/projects/26?fullscreen=true
+https://github.com/sky-uk/Digital-Help/projects/26
+https://github.com/sky-uk/Digital-Help/projects/27?fullscreen=true
+https://github.com/sky-uk/Digital-Help/projects/27
+https://github.com/sky-uk/Digital-Help/projects/25?fullscreen=true
+https://github.com/sky-uk/Digital-Help/projects/25</textarea>
+<button id='saveURLs'>Save and refresh</button>
+<script src='popup.js'></script>
