--- a/popup.html
+++ b/popup.html
@@ -12,5 +12,6 @@ https://github.com/sky-uk/Digital-Help/projects/27?fullscreen=true
 https://github.com/sky-uk/Digital-Help/projects/27
 https://github.com/sky-uk/Digital-Help/projects/25?fullscreen=true
 https://github.com/sky-uk/Digital-Help/projects/25</textarea>
-<button id='saveURLs'>Save and refresh</button>
+<button id='saveURLs'>Save</button>
+<button id='togglePrInfo'>Toggle extra PR Info</button>
 <script src='popup.js'></script>
