--- a/popup.html
+++ b/popup.html
@@ -13,5 +13,6 @@ https://github.com/sky-uk/Digital-Help/projects/27
 https://github.com/sky-uk/Digital-Help/projects/25?fullscreen=true
 https://github.com/sky-uk/Digital-Help/projects/25</textarea>
 <button id='saveURLs'>Save</button>
-<button id='togglePrInfo'>Toggle extra PR Info</button>
+<button id='togglePrInfo'>Toggle extra PR info</button>
+<button id='toggleLabels'>Toggle label control</button>
 <script src='popup.js'></script>
